...
    }
    
    indirect enum Action: Equatable, IndexedRouterAction {
        case routeAction(Int, action: SetupScreen.Action)
        case updateRoutes([Route<SetupScreen.State>])
        case eIDInteractionEvent(Result<EIDInteractionEvent, EIDInteractionError>)
        case end
        case confirmEnd
        case afterConfirmEnd
        case dismissAlert
        case dismiss
#if PREVIEW
        case runDebugSequence(ChangePINDebugSequence)
...
                    logger.error("No screen found to handle EIDInteractionEvents")
                    return .none
                }
                return EffectTask(value: localAction)
            case .routeAction(_, .intro(.chooseStartSetup)):
                state.routes.push(.transportPINIntro)
                return .trackEvent(category: "firstTimeUser", action: "buttonPressed", name: "startSetup", analytics: analytics)
            case .routeAction(_, .intro(.chooseSkipSetup(tokenURL: nil))):
                state.routes.push(.alreadySetupConfirmation)
                return .trackEvent(category: "firstTimeUser", action: "buttonPressed", name: "alreadySetup", analytics: analytics)
            case .routeAction(_, .transportPINIntro(.choosePINLetterAvailable)):
                state.routes.push(.transportPIN(SetupTransportPIN.State()))
            case .routeAction(_, .transportPINIntro(.choosePINLetterMissing)):
...
